--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(kivi-soft-renderer VERSION 0.1.0)
 
-add_executable(renderer main.cpp win32.cpp pipeline.cpp model.cpp camera.cpp shader.cpp tgaimage.cpp)
+set(CMAKE_INSTALL_PREFIX "${PROJECT_SOURCE_DIR}")
+set(CMAKE_DEBUG_POSTFIX "_d")
+set(CMAKE_RELEASE_POSTFIX "_r")
+add_subdirectory(src)
 
